Harden snapshot decoding